--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: url('background-image.jpg') no-repeat center center fixed; 
+      background: url('Images/background-image.jpg') no-repeat center center fixed; 
       background-size: cover;
       font-family: Helvetica, Arial, sans-serif; /* Changed to Helvetica as the primary font */
     }
