--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="text-container">
     <h1>PUMP.SCIENCE</h1>
     <p>COMING SOON</p>
-    <p><a href="https://t.me/+yC4VrtMtqNxlOGVk">Join our Telegram Group</a></p>
+    <p><a href="https://t.me/pump_science">Join our Telegram Group</a></p>
   </div>
 </body>
 </html>
